src/test/ui/tuple/tuple-struct-fields/test.stderr
error: missing separator `,`
  --> $DIR/test.rs:4:27
   |
LL |     struct S2(pub((foo)) ());
   |              -            ^ help: missing `,`
   |              |
   |              while parsing the list starting here

error: expected one of `;` or `where`, found `)`
  --> $DIR/test.rs:4:28
   |
LL |     struct S2(pub((foo)) ());
   |                            ^ expected one of `;` or `where`

error: aborting due to 2 previous errors

